--- a/index.html
+++ b/index.html
@@ -1,51 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TriCore Informatics & Services</title>
-    <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TriCore Informatics & Services</title>
+  <meta name="description" content="General Order Supply, IT & CCTV, and Construction Services in Pakistan">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
-<header>
+<header class="hero">
+  <div class="container">
     <h1>TriCore Informatics & Services</h1>
-    <p>General Order Supply | IT & CCTV | Construction Services</p>
+    <p>General Order Supply · IT & CCTV · Construction Services</p>
+  </div>
 </header>
 
-<nav>
+<nav class="nav">
+  <div class="container">
     <a href="#about">About</a>
     <a href="#services">Services</a>
     <a href="#contact">Contact</a>
+  </div>
 </nav>
 
-<section id="about">
+<main class="container">
+
+  <section id="about" class="section">
     <h2>About Us</h2>
     <p>
-        TriCore Informatics & Services is a Pakistan-based firm providing
-        professional General Order Supply, IT & CCTV solutions, and
-        Construction Services to government and private organizations.
+      TriCore Informatics & Services is a Pakistan-based partnership firm
+      providing reliable General Order Supply, IT & CCTV solutions,
+      and Construction Services to government and private organizations.
     </p>
-</section>
+  </section>
 
-<section id="services">
+  <section id="services" class="section">
     <h2>Our Services</h2>
-    <ul>
-        <li>General Order Supply</li>
-        <li>CCTV & Surveillance Systems</li>
-        <li>IT Infrastructure & Network Management</li>
-        <li>Construction & Civil Works</li>
-    </ul>
-</section>
 
-<section id="contact">
+    <div class="cards">
+      <div class="card">
+        <h3>General Order Supply</h3>
+        <p>Supply of equipment, materials, and services to government and private organizations.</p>
+      </div>
+
+      <div class="card">
+        <h3>IT & CCTV Solutions</h3>
+        <p>Design, installation, networking, surveillance systems, and IT management services.</p>
+      </div>
+
+      <div class="card">
+        <h3>Construction Services</h3>
+        <p>Civil works, construction, renovation, maintenance, and infrastructure projects.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="section">
     <h2>Contact</h2>
-    <p>Email: info@yourdomain.com</p>
-    <p>Phone: +92-XXX-XXXXXXX</p>
-</section>
+    <p>Email: <strong>info@tricoreinformatics.com</strong></p>
+    <p>Phone: <strong>+92-XXX-XXXXXXX</strong></p>
+  </section>
 
-<footer>
+</main>
+
+<footer class="footer">
+  <div class="container">
     <p>© 2026 TriCore Informatics & Services. All rights reserved.</p>
+  </div>
 </footer>
 
 </body>
