--- a/index.html
+++ b/index.html
@@ -56,11 +56,28 @@
     </div>
   </section>
 
-  <section id="contact" class="section">
-    <h2>Contact</h2>
-    <p>Email: <strong>info@tricoreinformatics.com</strong></p>
-    <p>Phone: <strong>+92-XXX-XXXXXXX</strong></p>
-  </section>
+<section id="contact" class="section">
+  <h2>Contact</h2>
+
+  <p>
+    <strong>Address:</strong><br>
+    Office # 1, 1st Floor, Taha Mall,<br>
+    Khawaja Corporation, Caltex Road,<br>
+    Rawalpindi, Pakistan
+  </p>
+
+  <p>
+    <strong>Phone:</strong>
+    <a href="tel:+923025027749">+92 302 5027749</a>
+  </p>
+
+  <p>
+    <strong>Email:</strong>
+    <a href="mailto:info@tricoreinformatics.com">
+      info@tricoreinformatics.com
+    </a>
+  </p>
+</section>
 
 </main>
 
